# arch-hexagonal-postgresql-fast

./: .env.example  .gitignore  .gitleaks.toml  QUICKSTART.md  README.md  WORKERS.md  alembic.ini  docker-compose.yml  promtail-config.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_outbox_events.py
src/arch_hexagonal_postgresql_fast/: __init__.py  client.py  config.py  feature_flags.py  main.py
src/arch_hexagonal_postgresql_fast/adapters/: __init__.py
src/arch_hexagonal_postgresql_fast/adapters/api/: __init__.py  dependencies.py  fastapi_app.py  routes.py  routes_async.py
src/arch_hexagonal_postgresql_fast/adapters/database/: __init__.py  base.py  outbox_event_model.py  postgresql_outbox_repository.py  postgresql_payment_repository.py  postgresql_transaction_repository.py  session_outbox_repository.py  sqlalchemy_models.py
src/arch_hexagonal_postgresql_fast/adapters/idempotency/: __init__.py  redis_store.py
src/arch_hexagonal_postgresql_fast/adapters/messaging/: __init__.py  rabbitmq_command_consumer.py  rabbitmq_command_publisher.py  rabbitmq_publisher.py
src/arch_hexagonal_postgresql_fast/adapters/payment_providers/: __init__.py  exceptions.py  mock_stripe_adapter.py  paypal_adapter.py  stripe_adapter.py
src/arch_hexagonal_postgresql_fast/application/: __init__.py
src/arch_hexagonal_postgresql_fast/application/commands/: __init__.py
src/arch_hexagonal_postgresql_fast/application/compensation/: __init__.py  strategies.py
src/arch_hexagonal_postgresql_fast/application/handlers/: __init__.py  command_handler.py
src/arch_hexagonal_postgresql_fast/application/ports/: __init__.py  command_consumer.py  command_publisher.py  event_publisher.py  idempotency_store.py  outbox_repository.py  payment_provider.py  payment_repository.py  transaction_repository.py
src/arch_hexagonal_postgresql_fast/application/services/: __init__.py  outbox_publisher.py
src/arch_hexagonal_postgresql_fast/application/use_cases/: __init__.py  get_transaction_status.py  process_payment.py  refund_payment.py
src/arch_hexagonal_postgresql_fast/cli/: __init__.py  run_command_worker.py  run_logger_consumer.py  run_outbox_worker.py
src/arch_hexagonal_postgresql_fast/domain/: __init__.py  exceptions.py
src/arch_hexagonal_postgresql_fast/domain/entities/: __init__.py  customer.py  payment.py  transaction.py
src/arch_hexagonal_postgresql_fast/domain/value_objects/: __init__.py  amount.py  payment_method.py  transaction_status.py
src/arch_hexagonal_postgresql_fast/workers/: __init__.py  command_worker.py  logger_event_consumer.py  outbox_worker.py
tests/integration/: conftest.py  test_postgresql_repository.py
tests/unit/: test_client.py  test_payment_entity.py  test_value_objects.py
tests/unit/test_services/: __init__.py  test_outbox_publisher.py
tests/unit/test_use_cases/: __init__.py  test_get_transaction_status.py  test_process_payment.py  test_refund_payment.py
