[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arch-hexagonal-postgresql-fast"
version = "0.1.0"
description = "Hexagonal architecture with PostgreSQL and payment processing"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Your Name", email = "your@email.com" }]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Payment Providers
    "stripe>=10.0.0",
    "paypalrestsdk>=1.13.0",
    # Messaging
    "aio-pika>=9.4.0",
    # Caching/Idempotency
    "redis>=5.0.0",
    # Retry mechanism
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "testcontainers[postgresql,rabbitmq,redis]>=4.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arch_hexagonal_postgresql_fast"]

# ==================================================
# RUFF
# ==================================================
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "PTH",
    "PL", "RUF", "PERF", "S", "ANN", "D", "N", "A",
    "DTZ", "T10", "LOG", "G", "PIE", "T20", "Q", "RSE", "RET",
    "SLOT", "TID", "FLY",
]
ignore = [
    "D100", "D104", "D107", "COM812",
    # Exception messages - allow inline strings for clarity
    "EM101", "EM102", "TRY003",
    # Too many arguments - domain validation needs them
    "PLR0913",
    # Magic values in domain - currency codes, etc.
    "PLR2004",
    # Unused arguments in interface implementations
    "ARG002",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "PLR2004", "SLF001", "S106", "ERA001"]
"**/__init__.py" = ["F401"]
"**/cli/**/*.py" = ["PLC0415", "E501"]  # Allow imports in functions for CLI
"**/workers/**/*.py" = ["PLC0415", "ASYNC110", "G201", "SIM105", "E501"]  # Worker patterns
"**/main.py" = ["S104"]  # Allow 0.0.0.0 binding in dev
"**/routes_async.py" = ["PLC0415", "E501", "B008"]  # Async routes patterns
"**/routes.py" = ["B008"]  # FastAPI Depends pattern
"**/dependencies.py" = ["B008"]  # FastAPI Depends pattern
"**/fastapi_app.py" = ["PLC0415", "ARG001"]  # App factory pattern
"**/exceptions.py" = ["N818"]  # Allow DomainException name
"alembic/**/*.py" = ["D415"]  # Alembic docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["arch_hexagonal_postgresql_fast"]

# ==================================================
# MYPY
# ==================================================
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["paypalrestsdk.*", "stripe.*"]
ignore_missing_imports = true

# ==================================================
# PYTEST
# ==================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"

# ==================================================
# COVERAGE
# ==================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "**/tests/*",
    "**/__init__.py",
    # Entry points - not unit testable
    "**/main.py",
    "**/cli/*",
    "**/workers/*",
    # Adapters tested via integration tests
    "**/adapters/*",
    # Config loaded from env
    "**/config.py",
    "**/feature_flags.py",
    # Compensation strategies - tested via integration
    "**/compensation/*",
    # Command handlers - async infrastructure
    "**/handlers/*",
    # Ports are abstract interfaces (Protocol)
    "**/ports/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
